# pyright-namespace-issue

./: .gitignore  LICENSE  README.md  example_script.py  pyproject.toml
